fix overflow orizzontale

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -595,7 +595,6 @@ a:hover {
 
     .music-section {
         padding-top: 1rem;
-        width: 100%;
         margin: auto;
     }
 }
@@ -655,7 +654,6 @@ a:hover {
 
     .music-section {
         padding-top: 1rem;
-        width: 100%;
         margin: auto;
     }
 }
@@ -748,7 +746,6 @@ a:hover {
 
     .music-section {
         padding-top: 1rem;
-        width: 100%;
         margin: auto;
     }
 
